<resources>
    <string name="app_name">ProyectoScann</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_RegistroLogi">REGISTRAR</string>
    <string name="menu_userinfo">Informacion General</string>
    <string name="menu_protocolosdesuridad">Protocolos de Primeros Auxilios</string>
    <string name="menu_centrosalud">Centro de Salud</string>
    <string name="menu_detallesdelapp">Detalles de App</string>
    <string name="menu_cerrarsesion">Cerrar Sesion</string>
    <string name="user_login">Usuario</string>
    <string name="passwoar_login">****************</string>
    <string name="button_login">INICIAR SESSION</string>
    <string name="buttonRecuperarPass">Olvidaste tu contraseña ?</string>
</resources>