<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userinfo"
            android:icon="@drawable/ic_user_informacion_24"
            android:title="@string/menu_userinfo" />

        <item
            android:id="@+id/nav_protocolos"
            android:icon="@drawable/ic_baseline_accessible_24"
            android:title="@string/menu_protocolosdesuridad" />
        <item
            android:id="@+id/nav_centrosalud"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_centrosalud" />
        <item
            android:id="@+id/nav_detalleapp"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_detallesdelapp" />
        <item
            android:id="@+id/nav_cerrarsecion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cerrarsesion" />
    </group>
</menu>